--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="https://ark.divinity.edu.au/theme/yui_combo.php?rollup/3.17.2/yui-moodlesimple-min.css" />
+<link rel="stylesheet" type="text/css" href="https://ark.divinity.edu.au/theme/styles.php/ark/1589348960/all" />
 <!--
     <h2>Upcoming Maintenance</h2><p>Planned maintenance has been scheduled for Wednesday 8 April 2020 between the hours of 5pm and 11pm AEST which will result in some university application systems being unavailable during this time. Although maintenance upgrades are restricted to within the Paradigm (TAMS) system, due to central authentication of university systems, the planned outage will mean that users will not be able to log into Paradigm, ARK and the Library Hub.</p>
 -->
