--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -2,12 +2,15 @@
 <link rel="stylesheet" type="text/css" href="https://ark.divinity.edu.au/theme/yui_combo.php?rollup/3.17.2/yui-moodlesimple-min.css" />
 <link rel="stylesheet" type="text/css" href="https://ark.divinity.edu.au/theme/styles.php/ark/1589348960/all" />
 <!--
-    <h2>Upcoming Maintenance</h2><p>Planned maintenance has been scheduled for Wednesday 8 April 2020 between the hours of 5pm and 11pm AEST which will result in some university application systems being unavailable during this time. Although maintenance upgrades are restricted to within the Paradigm (TAMS) system, due to central authentication of university systems, the planned outage will mean that users will not be able to log into Paradigm, ARK and the Library Hub.</p>
+<h2>Upcoming Maintenance</h2>
+<p>Planned maintenance has been scheduled for Wednesday 8 April 2020 between
+the hours of 5pm and 11pm AEST which will result in some university application
+systems being unavailable during this time. Although maintenance upgrades are
+restricted to within the Paradigm (TAMS) system, due to central authentication
+of university systems, the planned outage will mean that users will not be able
+to log into Paradigm, ARK and the Library Hub.</p>
 -->
-<h2>Update for Zoom users</h2>
-<p>Before the 30th May, all Zoom users will need to update the app to be on
-version 5.0 or higher. Otherwise, you will not be able to join a meeting.
-Please see <a
+<p><strong>Updates for Zoom users</strong>Please see <a
 href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
 
@@ -28,6 +31,7 @@ learning environment see the <a
 href="http://ark.divinity.edu.au/course/view.php?id=4">Teaching Online</a>.</li>
 </ul>
 
+<!--
 <h2>Student Surveys</h2>
 <p>During your studies, you'll have regular
 opportunities to have a say in your learning experience, through the Student
@@ -44,6 +48,7 @@ restrictions. For example, what was your learning experience in comparison to a
 face-to-face classroom? Did you have access to the resources you need on ARK
 and the Library Hub? Did the experience of online learning meet your
 expectations in communication and interactivity with staff and students?</p>
+-->
 
 <h2> Code of Conduct</h2>
 <p>The University of Divinity has a new Code of
