--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -1,6 +1,19 @@
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="https://ark.divinity.edu.au/theme/yui_combo.php?rollup/3.17.2/yui-moodlesimple-min.css" />
-<link rel="stylesheet" type="text/css" href="https://ark.divinity.edu.au/theme/styles.php/ark/1589348960/all" />
+<style>
+body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea {
+   color: #222;
+}
+h2 {
+        font-size: 160%;
+}
+.block {
+   font-family: "Arial",Helvetica Neue,Helvetica,sans-serif;
+   background: #f3efe6;
+}
+p {
+        margin: 0 0 10px;
+}
+</style>
+<div class="block">
 <!--
 <h2>Upcoming Maintenance</h2>
 <p>Planned maintenance has been scheduled for Wednesday 8 April 2020 between
@@ -59,3 +72,4 @@ duties and responsibilities as a member of the University. The new Code of
 Conduct is available <a href="https://divinity.edu.au/code-of-conduct/">on the
 University website</a>. A short video of the Vice-Chancellor introducing the
 Code is also available.</p>
+</div>
