--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -2,15 +2,19 @@
 body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea {
    color: #222;
 }
+body {
+    font-size: 14px;
+    line-height: 20px;
+}
 h2 {
-        font-size: 160%;
+    font-size: 160%;
 }
 .block {
-   font-family: "Arial",Helvetica Neue,Helvetica,sans-serif;
-   background: #f3efe6;
+    font-family: "Arial",Helvetica Neue,Helvetica,sans-serif;
+    background: #f3efe6;
 }
 p {
-        margin: 0 0 10px;
+    margin: 0 0 10px;
 }
 </style>
 <div class="block">
@@ -23,7 +27,7 @@ restricted to within the Paradigm (TAMS) system, due to central authentication
 of university systems, the planned outage will mean that users will not be able
 to log into Paradigm, ARK and the Library Hub.</p>
 -->
-<p><strong>Updates for Zoom users</strong>Please see <a
+<p><strong>Updates for Zoom users</strong> - Please see <a
 href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
 
