--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -1,21 +1,10 @@
 <style>
-body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea {
-   color: #222;
-}
-body {
-    font-size: 14px;
-    line-height: 20px;
-}
-h2 {
-    font-size: 160%;
-}
-.block {
-    font-family: "Arial",Helvetica Neue,Helvetica,sans-serif;
-    background: #f3efe6;
-}
-p {
-    margin: 0 0 10px;
-}
+body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea { color: #222; }
+body { font-size: 14px; line-height: 20px; }
+h2 { font-size: 160%; }
+.block { font-family: "Arial",Helvetica Neue,Helvetica,sans-serif; background: #f3efe6; }
+p { margin: 0 0 10px; }
+a, a:link, a:visited { color: #94111e; }
 </style>
 <div class="block">
 <!--
