--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -7,15 +7,13 @@ p { margin: 0 0 10px; }
 a, a:link, a:visited { color: #94111e; }
 </style>
 <div class="block">
-<!--
+<!-- -->
 <h2>Upcoming Maintenance</h2>
-<p>Planned maintenance has been scheduled for Wednesday 8 April 2020 between
-the hours of 5pm and 11pm AEST which will result in some university application
-systems being unavailable during this time. Although maintenance upgrades are
-restricted to within the Paradigm (TAMS) system, due to central authentication
-of university systems, the planned outage will mean that users will not be able
-to log into Paradigm, ARK and the Library Hub.</p>
--->
+<p>Planned maintenance has been scheduled for Thursday 23 July 2020 between
+the hours of 6am and 8am AEST which will result in ARK being unavailable for 20
+minutes during this window.
+</p>
+<!-- -->
 <p><strong>Updates for Zoom users</strong> - Please see <a
 href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
