not -between the hours-

--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -10,7 +10,7 @@ a, a:link, a:visited { color: #94111e; }
     <!-- -->
 <h2>Upcoming Maintenance</h2>
 <p>Planned maintenance has been scheduled for Sunday 26 July between
-the hours of 9am and 9:30am AEST which will result in ARK being unavailable
+9am and 9:30am AEST which will result in ARK being unavailable
 during this window.
 </p>
 <!-- -->
