--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -13,14 +13,15 @@ a, a:link, a:visited { color: #94111e; }
 9am and 9:30am AEST which will result in ARK being unavailable
 during this window.
 </p>
--->
+
 <p><strong>Updates for Zoom users</strong> - Please see <a
 href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
+-->
 
-<h2>COVID-19</h2>
+<h3>COVID-19</h3>
 <p>The university is utilising online delivery as much as
-possible for the remainder of first semester, please refer to the following for
+possible for the remainder of year, please refer to the following for
 more information:<br></p>
 <ul>
     <li>Please see the University's <a
@@ -34,6 +35,12 @@ learning environment see the <a
     <li>For Academic Staff, please head to <a
 href="http://ark.divinity.edu.au/course/view.php?id=4">Teaching Online</a>.</li>
 </ul>
+
+<h3>QILT Surveys</h3>
+<p>The Student Experience Survey is now open! By contributing your views and
+experiences, you're helping improve higher education for everyone - including
+current and future students. The survey is <a
+href="https://insights.srcentre.com.au/mrIWeb/mrIWeb.dll?I.Project=SRC2504AUTH">running online</a> from 28/07/2020 to 30/08/2020.</p>
 
 <!--
 <h2>Student Surveys</h2>
@@ -54,13 +61,11 @@ and the Library Hub? Did the experience of online learning meet your
 expectations in communication and interactivity with staff and students?</p>
 -->
 
-<h2> Code of Conduct</h2>
-<p>The University of Divinity has a new Code of
-Conduct. The Code of Conduct applies to all members of the University when on
-University or College premises, using University or College facilities and
-services, or engaging in University or College activities related to their
-duties and responsibilities as a member of the University. The new Code of
-Conduct is available <a href="https://divinity.edu.au/code-of-conduct/">on the
-University website</a>. A short video of the Vice-Chancellor introducing the
-Code is also available.</p>
+<h3> Code of Conduct</h3>
+<p>The University of Divinity has a new <a
+href="https://divinity.edu.au/code-of-conduct/">Code of Conduct</a> that applies to all
+members of the University when on University or College premises, using
+University or College facilities and services, or engaging in University or
+College activities related to their duties and responsibilities as a member of
+the University.</p>
 </div>
