--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -24,22 +24,22 @@ for further details.</p>
 possible for the remainder of year, please refer to the following for
 more information:<br></p>
 <ul>
-    <li>Please see the University's <a
+    <li>Please see the University's <a target="_blank" 
 href="https://divinity.edu.au/coronavirus/">COVID-19 page</a>
 for further information on our response.</li>
-    <li>For information regarding libraries, there is <a
+    <li>For information regarding libraries, there is <a target="_blank" 
         href="https://divinity.libguides.com/covid-19">this information page</a>.</li>
     <li>For assistance using the University's online
-learning environment see the <a
+learning environment see the <a target="_blank" 
     href="http://ark.divinity.edu.au/course/view.php?id=5">User Support page</a>.</li>
-    <li>For Academic Staff, please head to <a
+    <li>For Academic Staff, please head to <a target="_blank" 
 href="http://ark.divinity.edu.au/course/view.php?id=4">Teaching Online</a>.</li>
 </ul>
 
 <h3>QILT Surveys</h3>
 <p>The Student Experience Survey is now open! By contributing your views and
 experiences, you're helping improve higher education for everyone - including
-current and future students. The survey is <a
+current and future students. The survey is <a target="_blank" rel="noopener"
 href="https://insights.srcentre.com.au/mrIWeb/mrIWeb.dll?I.Project=SRC2504AUTH">running online</a> from 28/07/2020 to 30/08/2020.</p>
 
 <!--
@@ -62,7 +62,7 @@ expectations in communication and interactivity with staff and students?</p>
 -->
 
 <h3> Code of Conduct</h3>
-<p>The University of Divinity has a new <a
+<p>The University of Divinity has a new <a target="_blank" 
 href="https://divinity.edu.au/code-of-conduct/">Code of Conduct</a> that applies to all
 members of the University when on University or College premises, using
 University or College facilities and services, or engaging in University or
