re-order QILT section

--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -37,10 +37,11 @@ href="http://ark.divinity.edu.au/course/view.php?id=4">Teaching Online</a>.</li>
 </ul>
 
 <h3>QILT Surveys</h3>
-<p>The Student Experience Survey is now open! By contributing your views and
-experiences, you're helping improve higher education for everyone - including
-current and future students. The survey is <a target="_blank" rel="noopener"
-href="https://insights.srcentre.com.au/mrIWeb/mrIWeb.dll?I.Project=SRC2504AUTH">running online</a> from 28/07/2020 to 30/08/2020.</p>
+<p>The Student Experience Survey is <a target="_blank" rel="noopener"
+href="https://insights.srcentre.com.au/mrIWeb/mrIWeb.dll?I.Project=SRC2504AUTH">running
+    online</a> from 28/07/2020 to 30/08/2020. By contributing your views and
+    experiences, you're helping improve higher education for everyone - including
+    current and future students.</p>
 
 <!--
 <h2>Student Surveys</h2>
