updated re stage 4 restrictions in metropolitan Melbourne

--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -28,7 +28,7 @@ more information:<br></p>
 href="https://divinity.edu.au/coronavirus/">COVID-19 page</a>
 for further information on our response.</li>
     <li>For information regarding libraries, there is <a target="_blank" 
-        href="https://divinity.libguides.com/covid-19">this information page</a>.</li>
+        href="https://divinity.libguides.com/covid-19">this information page</a>. (Updated regrading stage 4 restrictions in metropolitan Melbourne)</li>
     <li>For assistance using the University's online
 learning environment see the <a target="_blank" 
     href="http://ark.divinity.edu.au/course/view.php?id=5">User Support page</a>.</li>
