show SUE notice and support link

--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -36,6 +36,13 @@ learning environment see the <a target="_blank"
 href="http://ark.divinity.edu.au/course/view.php?id=4">Teaching Online</a>.</li>
 </ul>
 
+<h3>Student Surveys</h3>
+<p>The University values student feedback on the quality of learning
+experiences. The Semester 2 surveys are under way. You will receive invitations
+via email and links via ARK the surveys. For more information, please see <a
+href="https://support.divinity.edu.au/students/student-unit-evaluations/">this
+support page</a></p>
+
 <!--
 <h3>QILT Surveys</h3>
 <p>The Student Experience Survey is <a target="_blank" rel="noopener"
@@ -44,7 +51,6 @@ href="https://insights.srcentre.com.au/mrIWeb/mrIWeb.dll?I.Project=SRC2504AUTH">
     experiences, you're helping improve higher education for everyone - including
     current and future students.</p>
 
-<h2>Student Surveys</h2>
 <p>During your studies, you'll have regular
 opportunities to have a say in your learning experience, through the Student
 Unit Evaluation online survey. We are committed to listening to your feedback
