--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -27,8 +27,8 @@ more information:<br></p>
     <li>Please see the University's <a target="_blank" 
 href="https://divinity.edu.au/coronavirus/">COVID-19 page</a>
 for further information on our response.</li>
-    <li>For information regarding libraries, there is <a target="_blank" 
-        href="https://divinity.libguides.com/covid-19">this information page</a>. (Updated regrading stage 4 restrictions in metropolitan Melbourne)</li>
+    <li>For information regarding libraries, see <a target="_blank" 
+        href="https://divinity.libguides.com/covid-19">this information page</a>.</li>
     <li>For assistance using the University's online
 learning environment see the <a target="_blank" 
     href="http://ark.divinity.edu.au/course/view.php?id=5">User Support page</a>.</li>
