add ARK upgrade notice

--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -7,13 +7,12 @@ p { margin: 0 0 10px; }
 a, a:link, a:visited { color: #94111e; }
 </style>
 <div class="block">
-<!--
-<h2>Upcoming Maintenance</h2>
-<p>Planned maintenance has been scheduled for Sunday 26 July between
-9am and 9:30am AEST which will result in ARK being unavailable
-during this window.
-</p>
 
+<h3>Upcoming Maintenance</h2>
+<p>Please be advised that scheduled maintenance and upgrades will take place on
+ARK between Dec 16 00:00 am and Dec 16 21:00 pm AEST. During this time ARK will
+be unavailable to use for all staff and students.</p>
+<!--
 <p><strong>Updates for Zoom users</strong> - Please see <a
 href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
