get timezone right

--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -10,7 +10,7 @@ a, a:link, a:visited { color: #94111e; }
 
 <h3>Upcoming Maintenance</h2>
 <p>Please be advised that scheduled maintenance and upgrades will take place on
-ARK between Dec 16 00:00 am and Dec 16 21:00 pm AEST. During this time ARK will
+ARK between Dec 16 00:00 am and Dec 16 21:00 pm AEDT. During this time ARK will
 be unavailable to use for all staff and students.</p>
 <!--
 <p><strong>Updates for Zoom users</strong> - Please see <a
