--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -1,18 +1,18 @@
 <style>
-body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea { color: #222; }
+body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea { color: #000; }
 body { font-size: 14px; line-height: 20px; }
 h2 { font-size: 160%; }
-.block { font-family: "Arial",Helvetica Neue,Helvetica,sans-serif; background: #f3efe6; }
+.block { font-family: "Arial",Helvetica Neue,Helvetica,sans-serif; background: #fff; }
 p { margin: 0 0 10px; }
 a, a:link, a:visited { color: #94111e; }
 </style>
 <div class="block">
 
+<!--
 <h3>Upcoming Maintenance</h2>
 <p>Please be advised that scheduled maintenance and upgrades will take place on
 ARK between Dec 16 00:00 am and Dec 16 21:00 pm AEDT. During this time ARK will
 be unavailable to use for all staff and students.</p>
-<!--
 <p><strong>Updates for Zoom users</strong> - Please see <a
 href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
