tweak COVID text; update language for SUEs (continuous)

--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -19,8 +19,8 @@ for further details.</p>
 -->
 
 <h3>COVID-19</h3>
-<p>The university is utilising online delivery as much as
-possible for the remainder of year, please refer to the following for
+<p>The university is continuing with utilising online modes for much of
+the delivery of units, please refer to the following for
 more information:<br></p>
 <ul>
     <li>Please see the University's <a target="_blank" 
@@ -37,8 +37,9 @@ href="http://ark.divinity.edu.au/course/view.php?id=4">Teaching Online</a>.</li>
 
 <h3>Student Surveys</h3>
 <p>The University values student feedback on the quality of learning
-experiences. The Semester 2 surveys are under way. You will receive invitations
-via email and links via ARK the surveys. For more information, please see <a
+experiences. The Student Unit Evaluation surveys occur throughout the year,
+as you are approaching the end of the unit. You will receive invitations via
+email and links via ARK to each survey. For more information, please see <a
 href="https://support.divinity.edu.au/students/student-unit-evaluations/">this
 support page</a></p>
 
