--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -17,6 +17,12 @@ be unavailable to use for all staff and students.</p>
 href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
 -->
+<h3>Census Dates reminder</h3>
+<p>The main Census Date for semester 1 is <strong>Tuesday 16
+March</strong>.</p> <p>Please refer to <a
+href="https://divinity.edu.au/about/key-dates/#9-census-date-information">this
+definition</a> for further information or to your Unit Guide to confirm
+the date.</p>
 
 <h3>COVID-19</h3>
 <p>The university is continuing with utilising online modes for much of
