--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -19,7 +19,7 @@ for further details.</p>
 -->
 <h3>Census Dates reminder</h3>
 <p>The main Census Date for semester 1 is <strong>Tuesday 16
-March</strong>.</p> <p>Please refer to <a
+March</strong>.</p> <p>Please refer to <a target="_blank" 
 href="https://divinity.edu.au/about/key-dates/#9-census-date-information">this
 definition</a> for further information or to your Unit Guide to confirm
 the date.</p>
