add _target for the other one

--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -45,7 +45,7 @@ href="http://ark.divinity.edu.au/course/view.php?id=4">Teaching Online</a>.</li>
 <p>The University values student feedback on the quality of learning
 experiences. The Student Unit Evaluation surveys occur throughout the year,
 as you are approaching the end of the unit. You will receive invitations via
-email and links via ARK to each survey. For more information, please see <a
+email and links via ARK to each survey. For more information, please see <a target="_blank" 
 href="https://support.divinity.edu.au/students/student-unit-evaluations/">this
 support page</a></p>
 
