--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -18,7 +18,7 @@ href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
 -->
 <h3>Census Dates reminder</h3>
-<p>The main Census Date for semester 2 is <strong>Tuesday 17 August
+<p>The main Census Date for semester 1, 2022 is <strong>Tuesday 15 March
 </strong>.</p> <p>Please refer to <a target="_blank" 
 href="https://divinity.edu.au/about/key-dates/#9-census-date-information">this
 definition</a> for further information or to your Unit Guide to confirm
