Sem 2 CD update; CoC is no longer new

--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -18,7 +18,7 @@ href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
 -->
 <h3>Census Dates reminder</h3>
-<p>The main Census Date for semester 1, 2022 is <strong>Tuesday 15 March
+<p>The main Census Date for semester 2, 2022 is <strong>Tuesday 16 August
 </strong>.</p> <p>Please refer to <a target="_blank" 
 href="https://divinity.edu.au/about/key-dates/#9-census-date-information">this
 definition</a> for further information or to your Unit Guide to confirm
@@ -75,7 +75,7 @@ expectations in communication and interactivity with staff and students?</p>
 -->
 
 <h3> Code of Conduct</h3>
-<p>The University of Divinity has a new <a target="_blank" 
+<p>The University of Divinity has a <a target="_blank" 
 href="https://divinity.edu.au/code-of-conduct/">Code of Conduct</a> that applies to all
 members of the University when on University or College premises, using
 University or College facilities and services, or engaging in University or
