--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -18,22 +18,20 @@ href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
 -->
 <h3>Census Dates reminder</h3>
-<p>The main Census Date for semester 2, 2022 is <strong>Tuesday 16 August
-</strong>.</p> <p>Please refer to <a target="_blank" 
+<p>The main Census Dates for semester 1, 2023 is <strong> Tuesday 21 March
+</strong>.</p>
+<p>For semester 2, 2023 it is <strong> Tuesday 22 August</strong>.</p>
+<p>Please refer to <a target="_blank" 
 href="https://divinity.edu.au/about/key-dates/#9-census-date-information">this
 definition</a> for further information or to your Unit Guide to confirm
 the date.</p>
 
 <h3>COVID-19</h3>
-<p>The university is continuing with utilising online modes for much of
-the delivery of units, please refer to the following for
-more information:<br></p>
+<p>Please refer to the following for more information:<br></p>
 <ul>
     <li>Please see the University's <a target="_blank" 
 href="https://divinity.edu.au/coronavirus/">COVID-19 page</a>
 for further information on our response.</li>
-    <li>For information regarding libraries, see <a target="_blank" 
-        href="https://divinity.libguides.com/covid-19">this information page</a>.</li>
     <li>For assistance using the University's online
 learning environment see the <a target="_blank" 
     href="http://ark.divinity.edu.au/course/view.php?id=5">User Support page</a>.</li>
