--- a/ark/notice-block.html
+++ b/ark/notice-block.html
@@ -8,15 +8,16 @@ a, a:link, a:visited { color: #94111e; }
 </style>
 <div class="block">
 
-<!--
 <h3>Upcoming Maintenance</h2>
 <p>Please be advised that scheduled maintenance and upgrades will take place on
-ARK between Dec 16 00:00 am and Dec 16 21:00 pm AEDT. During this time ARK will
+ARK between Dec 6 6:00 pm and Dec 7 6:00 pm AEDT. During this time ARK will
 be unavailable to use for all staff and students.</p>
+<!--
 <p><strong>Updates for Zoom users</strong> - Please see <a
 href="https://ark.divinity.edu.au/mod/page/view.php?id=127011">this page</a>
 for further details.</p>
 -->
+<!--
 <h3>Census Dates reminder</h3>
 <p>The main Census Dates for semester 1, 2023 is <strong> Tuesday 21 March
 </strong>.</p>
@@ -25,6 +26,7 @@ for further details.</p>
 href="https://divinity.edu.au/about/key-dates/#9-census-date-information">this
 definition</a> for further information or to your Unit Guide to confirm
 the date.</p>
+
 
 <h3>COVID-19</h3>
 <p>Please refer to the following for more information:<br></p>
@@ -38,6 +40,7 @@ learning environment see the <a target="_blank"
     <li>For Academic Staff, please head to <a target="_blank" 
 href="http://ark.divinity.edu.au/course/view.php?id=4">Teaching Online</a>.</li>
 </ul>
+-->
 
 <h3>Student Surveys</h3>
 <p>The University values student feedback on the quality of learning
